# crux-25

./: README.md  build.ps1  build_crux.ps1  build_encryptor.ps1  resources.txt  setup_and_build.bat
crux-server/: Cargo.toml
crux-server/payloads/: test_payload.txt
crux-server/src/: db.rs  main.rs  mock_agent.rs
crux-server/src/api/: mod.rs  server.rs
crux-server/src/api/pastebin/: mod.rs  models.rs  requests.rs
crux-server/src/crux/: handler.rs  mod.rs  models.rs  state.rs
crux-server/src/tui/: handler.rs  logger.rs  mod.rs  ui.rs
modules/EV_AV/: AmsiBypassViaPatternScan.cc
modules/creds_dumps/: cred_dump_lsass.cc  cred_dumping_PssCaptureSnapshot.cc
modules/footprinting/: GetPidFromNtQueryFileInformation.cc
modules/injections/: remote_thread.cc  waiting_thread_hijacking.cc
modules/pass_next/: weaponised_virtualization_snippet.cc
source/: CRUX_25.cc  awaiting_thread.cc  compile_script.sh  footprint_agent.cc  mod_select.cc  ntddk.h  ntdll_api.h  shcode.h  winHTTP_proto.cc
source/c2/: comm.cc  comm.h  crypto.cc  crypto.h  pastebin.cc  pastebin.h  protocol.h
source/dropper/: dropper.cc  dropper.h
source/footprinting/: GetPidFromNtQueryFileInformation.cc  GetPidFromNtQuerySystemInformation.cc  Win32Helper.h  footprinting.cc  footprinting.h
tests/: test_comm.cc  test_footprinting.cc  test_pastebin.cc
tools/: encrypt_payload.ps1  encryptor.cc
