[package]
name = "crux-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
quick-xml = { version = "0.38.4", features = ["serialize"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["default"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
ratatui = "0.30.0-beta.0"
futures = "0.3.31"
axum = { version = "0.7.5", features = ["macros"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }